--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asset Bonanza</title>
-    <script src=""></script>
-    <script src=""></script>
+    <script src="./lib/phaser.js"></script>
+    <script src="./src/main.js"></script>
 </head>
 <body>
     
